[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MENU.gd" type="Script" id=1]

[node name="MENU" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -60.0
offset_right = 345.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
offset_right = 561.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 561.0
offset_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
offset_top = 48.0
offset_right = 561.0
offset_bottom = 68.0
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
